working WU_counter

--- a/top_WU_Radio_1.ucf
+++ b/top_WU_Radio_1.ucf
@@ -205,7 +205,7 @@ TIMESPEC TS_okSysClk = PERIOD "okSysClk" 10 ns HIGH 50 %;
 //BLE
 NET "comp_out"		LOC = G20				|IOSTANDARD=LVCMOS33 |SLEW="SLOW"	|DRIVE = 2;		#JP2-24
 NET "wake_up"		LOC = J19				|IOSTANDARD=LVCMOS33 |SLEW="SLOW"	|DRIVE = 2;		#JP2-24
-NET "WU_serviced" LOC = D20           |IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;
+NET "trig_to_siggen" LOC = D20           |IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;
 
 NET "T_1"		LOC = N22				|IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;		#JP2-24
 NET "T_0"		LOC = R22				|IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;		#JP2-24
