--- a/top_WU_Radio_1.ucf
+++ b/top_WU_Radio_1.ucf
@@ -209,6 +209,10 @@ NET "trig_to_siggen" LOC = D20           |IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIV
 
 NET "T_1"		LOC = N22				|IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;		#JP2-24
 NET "T_0"		LOC = R22				|IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;		#JP2-24
+
+NET "bs_switch" LOC	 = C20  |IOSTANDARD=LVCMOS33 |SLEW="FAST"	|DRIVE = 2;		#JP2-24
+
+
 //NET "comp_out"		LOC = J19				|IOSTANDARD=LVCMOS33 |SLEW="SLOW"	|DRIVE = 2;		#JP2-24
 
 //NET "preset"		LOC = D20				|IOSTANDARD=LVCMOS33 |SLEW="SLOW"	|DRIVE = 2;		#JP2-24
